mmm4m5m & openlgtv community present LGMOD S7 v1.0.04 for LG TVs on Saturn 7 chipset. Tested on:
	LG 32LD465-ZA, firmware v03.03.11 and v03.03.32
	LG 42LD420-ZA, firmware v03.03.26
	LG 42LD550-ZA, firmware v03.01.08
	LG 32LE3300-ZA, firmware v03.03.32 (debug enabled in advance)
====================================================================================

Check the number of your partitions (especially if the TV is not EU or non LCD!)
	# cat /proc/mtdinfo
LGMOD S7 was tested on TV with 25 partitions.
	(mtd3=rootfs; mtd4=lginit; mtd11=user)

Features:
	LGMOD S7 is a port of LGMOD 1.6.10 with the following differences:
		upload dir is /dev/shm/upload, limit 22M (tools.cgi is modified)
		you can: /etc/init.d/lgmod start|stop
	/dev/shm is tmpfs (33MB), skeleton from /mnt/lg/user/lgmod/init/devshm/

Install:
	Enter debug mode: http://openlgtv.ru/wiki/index.php/Debug_mode_connection
		(you need RS232 cable and serial terminal program)
		Note: Debug is disabled after firmware v3.03.2x
	Press F10 for debug prompt
	Start 'sh'
		$ call debug_os_shell+0xb0
	Run installation script:
		# /mnt/usb1/Drive1/install.sh install
		(or: 'install.sh install rootfs=filename.sqfs')

It is important, your firmware to have unlocked uboot!
	http://openlgtv.org.ru/wiki/index.php/Bootloader_connection
	In case of troubles, you will need uboot!
	Note: Uboot is disabled after firmware v3.03.2x

About install.sh script:
	It does not write log file. Copy/Save the log from serial terminal program.
	Info for your TV is saved into separate text file.
	Force full backup: 'install.sh backup'. Dry run: 'install.sh dryrun'
	Dry run does 'info' and 'backup'. Dry run skips only erase & flash


Advanced: manual backup & install
	http://openlgtv.org.ru/wiki/index.php/How_to_backup_TV_firmware
	http://openlgtv.org.ru/wiki/index.php/Partition_Editing
Advanced: defails (/etc/init.d/rcS)
	startup option: mount /dev/ as tmpfs
	custom 'early init' script: /mnt/lg/user/lgmod/init/lginit
Advanced: changes